--- a/docs/style.css
+++ b/docs/style.css
@@ -1,3 +1,16 @@
+.button--primaryx {
+    border-color: transparent;
+    background-color: #01E675;
+    color: #fff !important;
+    align-items: flex-start;
+    text-align: center;
+    cursor: default;
+    box-sizing: border-box;
+    padding: 2px 6px 3px;
+    border-width: 2px;
+    border-style: outset;
+    border-image: initial;
+}
 .input-quatity {
      border: 0;
      border-radius: 10px;
